--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,10 @@
 name: Actions Workflow
 on:
-  push:
+  schedule:
+    # - cron: "minutes hours day_of_a_month month day_of_week"
+    - cron: "0/5 * * * *"
+    - cron: "0/6 * * * *"
+  # push:
   pull_request:
     types: [closed, assigned, opened, reopened]
 jobs:
