--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,11 @@
 name: Actions Workflow
 on:
-  schedule:
-    # - cron: "minutes hours day_of_a_month month day_of_week"
-    - cron: "0/5 * * * *"
-    - cron: "0/6 * * * *"
+  repository_dispatch:
+    types: [build]
+  # schedule:
+  #   # - cron: "minutes hours day_of_a_month month day_of_week"
+  #   - cron: "0/5 * * * *"
+  #   - cron: "0/6 * * * *"
   # push:
   pull_request:
     types: [closed, assigned, opened, reopened]
