--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,14 +1,28 @@
 name: Actions Workflow
 on:
-  repository_dispatch:
-    types: [build]
+  push: 
+    # branches-ignore:
+    branches:
+      - master
+      - 'feature/*' # matches feature/featA, feature/featB, doesn't match feature/feat/a
+      - 'feature/**' # this matches feature/feat/a
+      - '!feature/featC' # this one ignores the pattern
+    # tags-ignore:
+    tags:
+      - v1.*
+    # paths-ignore:
+    paths:
+      - '**.js'
+      - '!filename.js'
+  # repository_dispatch:
+  #   types: [build]
   # schedule:
   #   # - cron: "minutes hours day_of_a_month month day_of_week"
   #   - cron: "0/5 * * * *"
   #   - cron: "0/6 * * * *"
   # push:
-  pull_request:
-    types: [closed, assigned, opened, reopened]
+  # pull_request:
+  #   types: [closed, assigned, opened, reopened]
 jobs:
   run-github-actions:
     runs-on: ubuntu-latest
