--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -13,7 +13,7 @@ jobs:
           pwd
           ls -a
           git init
-          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_ACTOR/$GITHUB_REPOSITORY.git"
+          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
           git config --global user.email "my-bot@bot.com"
           git config --global user.name "my-bot"
           git fetch
@@ -23,7 +23,7 @@ jobs:
           ls -a
           echo $RANDOM >> random.txt
           ls -a
-          git add .
+          git add -A
           git commit -m "Random file"
           git push
       - name: Create issue using REST API
