--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -9,13 +9,13 @@ jobs:
         node_version: [6, 8, 10]
         include:
           - os: ubuntu-latest
-            node-version: 8
+            node_version: 8
             is_ubuntu_8: "true"
         exclude:
           - os: ubuntu-latest
-            node-version: 6
+            node_version: 6
           - os: macos-latest
-            node-version: 8
+            node_version: 8
       # fail-fast: true # if a task fail the others stops
       # max-parallel: 2 # the number of paralel matrix want to run
     runs-on: ${{ matrix.os }}
